# HRBF-Hermite-Radial-Basis-Functions-Skinning-Maya-Tool

./: .gitignore  CMakeLists.txt  README.md
example/: finalScene.mb
src/: CMakeLists.txt  HRBF.cpp  HRBF.h  HRBFManager.cpp  HRBFManager.h  convert.mel  hrbfCore.cpp  hrbfCore.h  skinCluster.cpp  skinCluster.h
